# fairydb

./: .gitignore  Cargo.toml  Dockerfile  README.md  client.sh  debugging-guide.md  docker-compose.yml  history.txt  vscode-launch.json
crusty_data/persist/default/managers/: reservoir_stat_manager
docs/: my-hs.md  my-op.md  my-pg.md
e2e-tests/: Cargo.toml
e2e-tests/benches/: filter_bench.rs  join_bench.rs
e2e-tests/src/: lib.rs  sqllogictest_utils.rs  test_db.rs
e2e-tests/testdata/: join1
src/cli-crusty/: Cargo.toml  config.json
src/cli-crusty/src/: lib.rs  main.rs
src/cli-fairy/: Cargo.toml
src/cli-fairy/common-fairy/benches/: tuple_bench.rs
src/cli-fairy/common-fairy/src/: catalog.rs  commands.rs  datatypes.rs  error.rs  rwlatch.rs
src/cli-fairy/index-fairy/: Cargo.toml
src/cli-fairy/index-fairy/src/: index_manager.rs  lib.rs
src/cli-fairy/optimizer-fairy/: Cargo.toml
src/cli-fairy/optimizer-fairy/src/: lib.rs  testutil.rs
src/cli-fairy/queryexe-fairy/: Cargo.toml
src/cli-fairy/queryexe-fairy/src/: lib.rs
src/cli-fairy/server-fairy/: Cargo.toml
src/cli-fairy/server-fairy/src/: server.rs  server_state.rs  sql_parser.rs
src/cli-fairy/src/: lib.rs  main.rs
src/cli-fairy/storage-fairy/: Cargo.toml
src/cli-fairy/storage-fairy/src/: lib.rs
src/cli-fairy/txn_manager-fairy/: Cargo.toml
src/cli-fairy/txn_manager-fairy/src/: transactions.rs
src/common/: Cargo.toml
src/common-fairy/: Cargo.toml
src/common-fairy/src/: attribute.rs  lib.rs  tuple.rs
src/common-fairy/src/physical/: col_id_generator.rs  config.rs  mod.rs
src/common-fairy/src/query/: bytecode_expr.rs  mod.rs  operation.rs  query_result.rs
src/common-fairy/src/traits/: transaction_manager_trait.rs
src/common/src/: datatypes.rs  error.rs  ids.rs  lib.rs  table.rs
src/common/src/physical/: config.rs  small_string.rs  tuple_conv0.rs  tuple_conv1.rs  tuple_conv2.rs  tuple_conv3.rs  tuple_writer.rs
src/common/src/query/: bytecode_expr.rs  expr.rs  query_registrar.rs  query_result.rs
src/common/src/traits/: index_trait.rs  mod.rs  plan.rs  stat_manager_trait.rs  state_tracker_trait.rs  storage_trait.rs  transaction_manager_trait.rs
src/common/src/util/: common_test_util.rs  data_reader.rs
src/index/: Cargo.toml
src/index-fairy/: Cargo.toml
src/index/src/: index_manager.rs
src/optimizer/: Cargo.toml
src/optimizer-fairy/: Cargo.toml
src/optimizer-fairy/src/: mock_optimizer.rs
src/optimizer/src/cost/: dummy_cost_model.rs
src/queryexe/: Cargo.toml
src/queryexe/src/: lib.rs  testutil.rs
src/queryexe/src/mutator/: mod.rs
src/queryexe/src/opiterator/: aggregate.rs  cross_join.rs  filter.rs  hash_join.rs  mod.rs  nested_loop_join.rs  project.rs  seqscan.rs  sort.rs  sort_merge_join.rs  tuple_iterator.rs  update.rs
src/queryexe/src/query/: executor.rs  planner.rs  translate_and_validate.rs
src/queryexe/src/stats/: mod.rs  per_attr_stats.rs  reservoir_stat_manager.rs
src/server/: Cargo.toml
src/server/src/: conductor.rs  daemon.rs  database_state.rs  handler.rs  lib.rs  main.rs  server.rs  server_state.rs
src/storage/: Cargo.toml
src/storage-fairy/: Cargo.toml
src/storage-fairy/heapstore/benches/: heap_bench.rs
src/storage-fairy/heapstore/src/: base_file.rs  base_file_mock.rs  heap_page.rs  page_tests.rs  storage_manager.rs
src/storage-fairy/heapstore/src/buffer_pool/: mem_stats.rs
src/storage-fairy/memstore/src/: storage_manager.rs
src/storage/heapstore/: Cargo.toml
src/storage/heapstore/benches/: page_bench.rs
src/storage/heapstore/src/: base_file.rs  base_file_tests.rs  heap_file.rs  heap_page_tests.rs  page.rs  storage_manager.rs  storage_manager_tests.rs
src/storage/heapstore/src/buffer_pool/: buffer_frame.rs  buffer_pool.rs  eviction_policy.rs  mem_pool_trait.rs  mod.rs
src/storage/memstore/: Cargo.toml
src/storage/memstore/src/: storage_manager.rs
src/txn_manager/: Cargo.toml
src/txn_manager/src/: lib.rs  mock_tm.rs  transactions.rs
src/utilities/: Cargo.toml
src/utilities/src/: lib.rs
(+38 files in other folders)
