[package]
name = "e2e-tests"
version = "0.1.0"
authors = ["James Doucette"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utilities = { path ="../src/utilities"}
common = { path ="../src/common"}
server = { path ="../src/server"}
cli-crusty = { path ="../src/cli-crusty"}
clap = {version = "4.5", features = ["derive"]}
log = "0.4"
env_logger = "0.10"
csv = "1.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "join_bench"
harness = false

[[bench]]
name = "filter_bench"
harness = false
