[package]
name = "storage-fairy"
version = "0.1.0"
authors = ["Ziad Elshahawy <zelshahawy@uchicago.edu>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
rstest = "0.18"
tempfile = "3.9"
heapstore = { path = "./heapstore-fairy" }
memstore = { path = "./memstore-fairy" }
common = { path = "../common-fairy" }
