[package]
name = "server-fairy"
version = "0.1.0"
authors = ["Ziad Elshahawy <zelshahawy@uchicago.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sqlparser = "0.41"
csv = "1.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_cbor = "0.11"
log = "0.4"
env_logger = "0.10"
tempfile = "3.2"
common = { path = "../common-fairy" }
storage = { path = "../storage-fairy" }
txn_manager = { path = "../txn_manager-fairy" }
queryexe = { path = "../queryexe-fairy" }
optimizer = { path = "../optimizer-fairy" }
index = { path = "../index-fairy" }
